--- a/roles/postgres/defaults/main.yml
+++ b/roles/postgres/defaults/main.yml
@@ -1,15 +1,6 @@
----
-- name: Get OS type
-  debug:
-    var: ansible_facts.distribution
-
-- name: Get OS type
-  debug:
-    var: ansible_user
-#ansible_facts.distribution
-
-#
-# - name: Update repositories cache and install  package
-#   apt:
-#     name: apache2
-#    update_cache: yes
+postgres_url: https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm
+postgres_user: bars_kinder
+postgres_databases:
+  - bars_kinder
+  - bars_kinder_service
+  
