--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -30,6 +30,8 @@
 - name: Update repositories latest postgres
   yum:
     name:
+     - python2-devel
+     - python3-devel
      - python3-pip
      - python2-pip
      - libpq
